--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
